add event name to mails

--- a/src/main/resources/templates/email-confirmation-link.html
+++ b/src/main/resources/templates/email-confirmation-link.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <h4 th:text="${event}">Event</h4>
         <a th:href="${url}">Kliknij aby potwierdzić udział w wydarzeniu</a>
     </body>
 </html>
