--- a/src/main/resources/templates/email-cancellation-link.html
+++ b/src/main/resources/templates/email-cancellation-link.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
+    <h4 th:text="${event}">Event</h4>
     <a th:href="${url}">Kliknij aby zrezygnować z wydarzenia</a>
 </body>
 </html>
